@@ -1,6 +1,8 @@
 
 HEAD
 ====
+- libxt_gradm: match packets based on status of grsecurity RBAC
+  (userspace part only - xt_gradm is in the grsec patch)
 
 
 v1.30 (October 02 2010)
